Bug 45706 - "systemctl dot" uses color "darkgrey" which dot does not recognize
Summary: "systemctl dot" uses color "darkgrey" which dot does not recognize
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-06 08:08 UTC by Michael Biebl
Modified: 2012-07-23 16:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michael Biebl 2012-02-06 08:08:26 UTC
Version: 39
Bug-Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=643689

"systemctl dot" produces a dot diagram which uses the color "darkgrey";
however, dot does not recognize the color "darkgrey", so it produces a
warning:

Warning: darkgrey is not a known color.
Comment 1 Lennart Poettering 2012-02-09 15:24:44 UTC
Hmm, is there any color we can use instead? Maybe dot knows "darkgray" instead of "darkgrey"?
Comment 2 Michael Biebl 2012-02-09 16:31:36 UTC
The dot man page says:


       A  colorvalue  may  be  "h,s,v"  (hue, saturation, brightness) floating
       point numbers between 0 and 1, or an X11 color name such as white black
       red  green  blue yellow magenta cyan or burlywood, or a "#rrggbb" (red,
       green, blue, 2 hex characters each) value.

So maybe use "gray" or the #rrggbb notation?
Comment 3 Lennart Poettering 2012-02-09 17:39:28 UTC
darkgrey is an X11 color, so we are perfectly in line with the man page here.

$ grep -i darkgr /usr/share/X11/rgb.txt
  0 100   0		DarkGreen
169 169 169		DarkGrey
169 169 169		DarkGray

Is that different on Debian?
Comment 4 Michael Biebl 2012-02-09 22:59:32 UTC
(In reply to comment #3)
> darkgrey is an X11 color, so we are perfectly in line with the man page here.
> 
> $ grep -i darkgr /usr/share/X11/rgb.txt
>   0 100   0        DarkGreen
> 169 169 169        DarkGrey
> 169 169 169        DarkGray
> 
> Is that different on Debian?

I get the same output on Debian.
Comment 5 Lennart Poettering 2012-02-10 10:16:14 UTC
Then this sounds like a bug in dot, no?
Comment 6 Zbigniew Jedrzejewski-Szmek 2012-07-21 07:43:07 UTC
Right, graphviz has ./cmd/tools/colortbl.h with colornames, and darkgrey is not in it. Debian has graphviz 2.26, and Fedora 2.28, so maybe it's enough to wait for Debian to package the new version.

http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=645410
Comment 7 Zbigniew Jedrzejewski-Szmek 2012-07-23 16:29:32 UTC
Fixed in 81cf1c43c9a.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.